# Agenor

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac
.github/: ISSUE_TEMPLATE.md
.travis/: test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
.tx/: config
build-aux/m4/: bitcoin_qt.m4  gmp.m4
build-aux/snap/: snapcraft.yaml
contrib/: agenor-cli.bash-completion  agenor-qt.pro  agenor-tx.bash-completion  agenord.bash-completion  gitian-build.py  install_db4.sh  valgrind.supp
contrib/bitrpc/: bitrpc.py
contrib/debian/: README.md  agenor-qt.desktop  agenor-qt.install  agenor-qt.lintian-overrides  agenor-qt.manpages  agenor-qt.protocol  agenord.bash-completion  agenord.examples  agenord.install  agenord.lintian-overrides  agenord.manpages  agenord.postinst  agenord.postrm  agenord.service  changelog  control  rules  watch
contrib/devtools/: README.md  check-doc.py  copyright_header.py  gen-manpages.sh  logprint-scanner.py  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-keys/: README.md
contrib/init/: README.md  agenord.conf  agenord.init  agenord.openrc  agenord.openrcconf  agenord.service  org.agenor.agenord.plist
contrib/linearize/: linearize-hashes.py
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md  (+1 more)
depends/: Makefile  README.md
doc/: Doxyfile.in  README.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  release-notes.md  release-process.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
share/: genbuild.sh  setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrdb.cpp  addrdb.h  addressbook.cpp  addressbook.h  addrman.cpp  addrman.h  agenor-cli-res.rc  agenor-cli.cpp  agenor-tx-res.rc  agenor-tx.cpp  agenord-res.rc  agenord.cpp  amount.cpp  amount.h  base58.h  bip38.cpp  bip38.h  blob_uint256.h  blocksignature.cpp  blocksignature.h  bloom.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  (+89 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  agenor.cpp  agenor.qrc  agenor_locale.qrc  agenorstrings.cpp  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macnotificationhandler.h  macnotificationhandler.mm  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  paymentserver.cpp  paymentserver.h  peertablemodel.cpp  recentrequeststablemodel.cpp  recentrequeststablemodel.h  rpcconsole.cpp  rpcconsole.h  transactionfilterproxy.cpp  transactionrecord.cpp  (+7 more)
src/qt/agenor/: addnewaddressdialog.cpp  addnewaddressdialog.h  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  agenorgui.cpp  agenorgui.h  coldstakingmodel.cpp  coldstakingmodel.h  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  csrow.cpp  csrow.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  expandablebutton.cpp  expandablebutton.h  focuseddialog.cpp  focuseddialog.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  guitransactionsutils.cpp  guitransactionsutils.h  loadingdialog.cpp  loadingdialog.h  lockunlock.cpp  (+53 more)
src/qt/agenor/forms/: addresseswidget.ui  coldstakingwidget.ui  csrow.ui  dashboardwidget.ui  masternodeswidget.ui  masternodewizarddialog.ui  receivewidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  sendcustomfeedialog.ui  sendmultirow.ui  topbar.ui  welcomecontentwidget.ui
src/qt/agenor/res/css/: style_dark.css  style_light.css
src/qt/agenor/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsmultisenddialog.cpp  settingsmultisenddialog.h  settingsmultisendwidget.cpp  settingsmultisendwidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/agenor/settings/forms/: settingsbittoolwidget.ui  settingsdisplayoptionswidget.ui  settingsfaqwidget.ui  settingsmainoptionswidget.ui  settingssignmessagewidgets.ui  settingswidget.ui
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  rpcconsole.ui
src/qt/locale/: agenor_de.ts  agenor_en.ts  agenor_en_US.ts  agenor_es.ts  agenor_es_ES.ts  agenor_fr_FR.ts  agenor_hr_HR.ts  agenor_it.ts  agenor_ko_KR.ts  agenor_nl.ts  agenor_pl.ts  agenor_ru.ts  agenor_tr.ts  agenor_zh_CN.ts
src/qt/res/: agenor-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoin.icns
src/qt/test/: test_main.cpp  uritests.cpp
test/: README.md
util/: fetch-params.sh
(+299 files in other folders)
